# presentations

./: .editorconfig  README.md
2017-09-26_CppCon2017/: index.html
2017-09-26_CppCon2017/CNL_A_Compositional_Numeric_Library/: .index.html.kate-swp  index.html
2017-09-26_CppCon2017/Signed_Integers_Faster_and_Correcter/: css?family=Yanone+Kaffeesatz  how-undefined-signed-overflow-enables.html  index.html
2017-09-26_CppCon2017/outtakes/: index.md
2017-09-27_CppCon2017/: index.html
2017-10-07_SVCC/: index.html
2018-04-09_CppDub/: index.html
2018-04-??_Pointers/: CMakeLists.txt
2018-04-??_Pointers/examples/1_pointers/: 1.c  2.c  3.cpp  4.cpp
2018-04-??_Pointers/examples/2_free_store/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp
2018-05-09_ACCU_Bay_Area/: index.html
